# zenvx-os

./: .gitignore  LICENSE  MONITORING.md  Makefile  README.md  boot.S  config.json  grub.cfg  kernel.c  linker.ld  watch-code.py
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/ai-core/: Cargo.toml
crates/ai-core/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: lib.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: lib.rs
crates/mode/: Cargo.toml
crates/mode/src/: lib.rs
crates/repl/: Cargo.toml
crates/repl/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/shell-ui/: Cargo.toml
crates/shell-ui/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/voice/: Cargo.toml
crates/voice/src/: lib.rs
crates/zenvx/: Cargo.toml
crates/zenvx/src/: main.rs
docs/: index.html
iso/: boot-iso.sh  build-iso.sh
iso/overlay/: packages.x86_64
iso/overlay/airootfs/root/: .bash_profile  .zprofile
iso/overlay/airootfs/root/.config/hypr/: hyprland.conf
iso/overlay/airootfs/root/.config/sway/: config
iso/overlay/airootfs/root/.config/waybar/: config  style.css
